# Simple-cv2-wrapper

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: simple_cv2_wrapper.py
