[project]
name = "simple_cv2_wrapper"
version = "0.1.0"
authors = [
  { name="Noizrom" },
]
description = "A very simple wrapper for cv2 for usual stuff"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Utilities"
]

[project.urls]
"Homepage" = "https://github.com/Noizrom/Simple-cv2-wrapper"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"